# simple-obfs

./: .gitignore  .gitmodules  .travis.yml  APKBUILD  AUTHORS  Changes  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  config.json  configure  configure.ac
debian/: changelog  config.json  control  copyright  doc-base  install  postinst  postrm  rules  watch
debian/patches/: 0001-Use-libcork-dev-in-system.patch  series
doc/: Makefile.am  Makefile.in  obfs-local.asciidoc  obfs-server.asciidoc
libcork/: Makefile.in
libev/: Makefile.in
libipset/: Makefile.in
libsodium/: Makefile.in  configure
libsodium/src/libsodium/: Makefile.in
libsodium/src/libsodium/include/: Makefile.in
libudns/: Makefile.in
rpm/: genrpm.sh
rpm/SPECS/: shadowsocks-simple-obfs.spec.in
scripts/: git_archive.sh
src/: Makefile.am  Makefile.in  android.c  base64.c  common.h  encrypt.c  encrypt.h  jconf.c  jconf.h  json.c  local.c  local.h  netutils.c  netutils.h  obfs.h  obfs_http.c  obfs_http.h  obfs_tls.c  obfs_tls.h  options.c  options.h  resolv.c  resolv.h  server.c  server.h  utils.c  utils.h  win32.c  win32.h
